product_docs/docs/warehousepg/7.6/ref_guide/system_catalogs/system_catalogs_definitions/pg_stat_operations.mdx
---
# Imported from the WHPG docs repo (https://github.com/warehouse-pg/whpg-docs)
# Changes made here may be overwritten. Prefer making changes in the source repo instead.
# See the originalFilePath value below for a link to the source of this file in the WHPG docs repo.
#
# To make changes that apply _only_ to EDB's documentation, try to cleanly separate those changes in the content
# (e.g. separate lines or ideally paragraphs or even sections, with clear indications that the content is EDB-specific) and 
# reach out to the docs team to discuss.

title: pg_stat_operations
originalFilePath: >-
  https://github.com/warehouse-pg/whpg-docs/blob/main/docs/whpg/7x/ref_guide/system_catalogs/system_catalogs_definitions/pg_stat_operations.md
editTarget: originalFilePath

---

The view `pg_stat_operations` shows details about the last operation performed on a database object (such as a table, index, view or database) or a global object (such as a role, resource queue, or resource group).

| column       | type        | references | description                                                                                                                                                                                                                                                                                                                                     |
| ------------ | ----------- | ---------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `classname`  | text        |            | The name of the system table in the `pg_catalog` schema where the record about this object is stored (`pg_class`=relations, `pg_database`=databases, `pg_namespace`=schemas, `pg_authid`=roles, `pg_tablespace`=tablespaces, `pg_resqueue`=resource queues, `pg_resgroup`=resource groups, `pg_resgroupcapability`=resource group capabilities) |
| `objname`    | name        |            | The name of the object.                                                                                                                                                                                                                                                                                                                         |
| `objid`      | oid         |            | The OID of the object.                                                                                                                                                                                                                                                                                                                          |
| `schemaname` | name        |            | The name of the schema where the object resides.                                                                                                                                                                                                                                                                                                |
| `usestatus`  | text        |            | The status of the role who performed the last operation on the object (`CURRENT`=a currently active role in the system, `DROPPED`=a role that no longer exists in the system, `CHANGED`=a role name that exists in the system, but has changed since the last operation was performed).                                                         |
| `usename`    | name        |            | The name of the role that performed the operation on this object.                                                                                                                                                                                                                                                                               |
| `actionname` | name        |            | The action that was taken on the object.                                                                                                                                                                                                                                                                                                        |
| `subtype`    | text        |            | The type of object operated on or the subclass of operation performed.                                                                                                                                                                                                                                                                          |
| `statime`    | timestamptz |            | The timestamp of the operation. This is the same timestamp that is written to the WarehousePG server log files in case you need to look up more detailed information about the operation in the logs.                                                                                                                                           |

!!!note Version availability
Resource queue and resource group operations (`pg_resqueue`, `pg_resgroup`, and `pg_resgroupcapability` in `classname`) are tracked starting with WarehousePG 7.6.0.
!!!

**Parent topic:** [System Catalogs Definitions](./)
